Prevent book title overflow

--- a/css/home.css
+++ b/css/home.css
@@ -125,7 +125,7 @@ html {
 /* Carousel CSS */
 .carousel {
     display: grid;
-    gap: max(4.85vw, 2.85rem);
+    gap: max(4.75vw, 2.75rem);
     grid-auto-flow: column;
     overflow-x: hidden;
 }
@@ -171,7 +171,7 @@ html {
     height: clamp(var(--min-book-height), var(--book-height), var(--max-book-height));
     padding: calc(var(--book-height) * 0.25) calc(var(--book-width) * 0.25);
     background-color: #E6E2DB;
-    border-radius: max(40px, 2vw);
+    border-radius: max(30px, 1vw);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,18 +191,27 @@ html {
 .book-desc {
     font-family: 'Lato', sans-serif;
     text-align: center;
+    width: clamp(
+        calc(var(--min-book-width) * 1.3), 
+        calc(var(--book-width) * 1.3), 
+        calc(var(--max-book-width) * 1.3)
+        );
 }
 
 .book-title {
+    width: inherit;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-weight: 700;
     min-height: 0vw;
-    font-size: clamp(1.2rem, 1.4vw, 3.3rem);
+    font-size: clamp(1.1rem, 1.3vw, 2.5rem);
 }
 
 .book-price {
     font-weight: 500;
     min-height: 0vw;
-    font-size: clamp(1rem, 1.2vw, 2.8rem);
+    font-size: clamp(1rem, 1.2vw, 2.4rem);
 }
 
 /* Contactless section CSS */
@@ -308,6 +317,14 @@ html {
 @media screen and (max-width: 600px) {
     .home-section, #contactless-content {
         max-width: calc(70% + 50px);
+    }
+
+    .book-desc {
+        width: clamp(
+            var(--min-book-width), 
+            var(--book-width), 
+            var(--max-book-width)
+        );
     }
 }
 
